--- a/javascript/datatype-string-ex1.html
+++ b/javascript/datatype-string-ex1.html
@@ -15,17 +15,19 @@
         var e = 'hello"john"';
         var f = "hello'john'";
 
-        console.log(e);
-        console.log(f);
+        console.log(e);// hello"john"
+        console.log(f);// hello'john'
 
         var g = "hello \"john\"";
-        console.log(g);
+        console.log(g);// hello "john"
 
         var h = 'hello \'john\'';
-        console.log(h);
+        console.log(h);// hello 'john'
 
         var i = 'hello \\john\\';
-        console.log(i);
+        console.log(i);// hello \john\
+
+
 
     </script>
 </body>
