math comparison boolean

--- a/html/comment-ex1.html
+++ b/html/comment-ex1.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <style>
+            /* css주석 */
+    </style>
+</head>
 <body>
-    <h1> 주석comments </h1>
-    <!--이것은 주석입니다-->
-    <p>문단</p>
+    <!--html 주석-->
+
+    <script>
+
+        // script 한 줄 주석(ctrl+슬래시)   
+        
+        /* script 여러줄 주석
+        1.
+        2.
+        3. */
+    </script>
 
 
 </body>
-
 </html>
