--- a/javascript/operator-comparison-ex2.html
+++ b/javascript/operator-comparison-ex2.html
@@ -42,7 +42,7 @@
         function gt() {
             var num1 = document.getElementById("input1").value;
             var num2 = document.getElementById("input2").value;
-            num1 = Number(num1);
+           // num1 = Number(num1);
             num2 = Number(num2);
 
             var res = num1 > num2;
