onkeyup if-else switch

--- a/javascript/event-ex2-onkeyup.html
+++ b/javascript/event-ex2-onkeyup.html
@@ -11,9 +11,9 @@
     <script>
         function show() {
             var txt = document.getElementById("input1").value;
-            // console.log(txt);
+            console.log(txt);
    
-         document.getElementById("result").innerHTML = txt;
+         //document.getElementById("result").innerHTML = txt;
         }
     </script>
 
