--- a/jquery/event-ex2-this.html
+++ b/jquery/event-ex2-this.html
@@ -19,9 +19,9 @@
     {
         //console.log("hello");
         //console.log(this); //이벤트를 받음
-        $(this).hide //j쿼리 메소스들을 사용 
+        $(this).hide() //j쿼리 메소스들을 사용 
     });
-    
+
     </script>
 </body>
 </html>
