--- a/jquery/dom-get-ex1.html
+++ b/jquery/dom-get-ex1.html
@@ -16,7 +16,7 @@
       var v = $("#input1").val();
       console.log(v);
 
-      $("#input1").keyup(function() { //korea표기
+      $("#input1").keyup(function() {
         var val = $(this).val();
         console.log(val);
       });
